--- a/packages/nextjs/src/app/globals.css
+++ b/packages/nextjs/src/app/globals.css
@@ -17,7 +17,7 @@
     --radius: 0.5rem;
   }
 
-  [data-theme="dark"] {
+  [data-theme='dark'] {
     --background: 210 21% 9%; /* #121A1E */
     --card: 210 19% 18%; /* #1E2A2E */
     --primary: 176 73% 44%; /* #2AC1BC */
@@ -36,6 +36,6 @@
   }
   body {
     @apply bg-background text-foreground;
-    font-family: "Manrope", sans-serif;
+    font-family: 'Manrope', sans-serif;
   }
 }
