--- a/packages/nextjs/src/app/globals.css
+++ b/packages/nextjs/src/app/globals.css
@@ -32,7 +32,7 @@
     --impact-bg: 329 84% 58%;
     --impact-text: 329 84% 58%;
     --impact-border: 329 84% 58%;
-    --sidebar-background: 0 0% 98%;
+    --sidebar-background: 0 0% 100%; /* Same as --card */
     --sidebar-foreground: 240 5.3% 26.1%;
     --sidebar-primary: 240 5.9% 10%;
     --sidebar-primary-foreground: 0 0% 98%;
@@ -71,7 +71,7 @@
     --impact-bg: 329 84% 58%;
     --impact-text: 329 84% 58%;
     --impact-border: 329 84% 58%;
-    --sidebar-background: 240 5.9% 10%;
+    --sidebar-background: 210 19% 18%; /* Same as --card */
     --sidebar-foreground: 240 4.8% 95.9%;
     --sidebar-primary: 224.3 76.3% 48%;
     --sidebar-primary-foreground: 0 0% 100%;
