feat: I built the roadmap section of the landing page

--- a/packages/nextjs/src/app/globals.css
+++ b/packages/nextjs/src/app/globals.css
@@ -98,3 +98,7 @@
   }
 }
 
+/* Hide the react-chrono timeline card pointers */
+span[class^='TriangleIconWrapper'] {
+  display: none !important;
+}
